--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -24,4 +24,19 @@
 
 #container a {
   text-decoration: none;
+
+
 }
+ion-button{
+  font-size: large;
+  left: 44;
+  
+
+}
+page-home{
+  ion-title*{
+    margin-top: 60vh;
+    margin-bottom: 100vh;
+  }
+}
+
