--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,7 +12,7 @@
     <ion-input placeholder="Email" [(ngModel)]="email"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-input  placeholder="Password" [(ngModel)]="password"></ion-input>
+    <ion-input  [type]="isTextFieldType ? 'text' : 'password'" placeholder="Password" [(ngModel)]="password"></ion-input>
   </ion-item>
 
  
